[package]
name = "snmpkafkasender"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
rdkafka = { version = "0.29", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"